# mtp-frontend

./: CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  context.md  debug_together.py  pyproject.toml  test_groq.py
docs/: AGENT_API.md  ARCHITECTURE.md  CLI.md  CREATING_TOOLS.md  EVENTS.md  GROQ_INTEGRATION.md  IMPLEMENTATION_NOTES.md  LOCAL_TOOLKITS.md  MCP_INTEROP.md  PROVIDERS.md  QUICKSTART.md  ROADMAP.md  TRANSPORT.md  TUI_LOCAL_INFERENCE.md
examples/: anthropic_agent.py  cerebras_agent.py  cohere_agent.py  custom_toolkit_agent.py  deepseek_agent.py  fireworks_agent.py  gemini_agent.py  groq_agent.py  groq_agent_events.py  lmstudio_agent.py  mcp_http_server.py  mcp_stdio_server.py  mistral_agent.py  mysql_agent_session.py  ollama_agent.py  openai_agent.py  openai_multimodal_agent.py  openrouter_agent.py  openrouter_multimodal_agent.py  postgres_agent_session.py  quickstart.py  sambanova_agent.py  streamlit_groq_agent_chat.py  together_agent.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/execution/: page.tsx
frontend/app/(app)/playground/: page.tsx
frontend/app/docs/: layout.tsx
frontend/app/docs/[slug]/: page.tsx
frontend/components/: AnimatedCard.tsx  BubbleBackground.tsx  CodeBlock.tsx  MarketingNavbar.tsx  Navbar.tsx  Sidebar.tsx
src/mtp/: __init__.py  agent.py  events.py  mcp.py  mcp_transport.py  media.py  protocol.py  runtime.py  session_store.py  simple_agent.py  strict.py  tools.py
src/mtp/cli/: main.py  tui.py  tui_cat.py  tui_codex_backend.py  tui_completers.py  tui_harness_agent.py  tui_harness_policy.py  tui_harness_tools.py  tui_mtp_backend.py  tui_provider_factory.py  tui_settings.py  tui_theme.py
src/mtp/providers/: __init__.py  anthropic_provider.py  cerebras_provider.py  cohere_provider.py  common.py  deepseek_provider.py  fireworks_provider.py  gemini_provider.py  groq_provider.py  lmstudio_provider.py  mistral_provider.py  mock.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  sambanova_provider.py  simple_planner.py  together_provider.py
src/mtp/toolkits/: __init__.py  calculator.py  crawl4ai_toolkit.py  local.py  python_toolkit.py  shell_toolkit.py
src/mtp/transport/: __init__.py  common.py  http.py  stdio.py  ws.py
tests/: harness_utils.py  test_agent.py  test_agent_loop.py  test_all_providers.py  test_docs_consistency.py  test_mcp_adapter.py  test_mcp_conformance.py  test_mcp_transport.py  test_openrouter.py  test_packaging_extras.py  test_provider_aliases.py  test_provider_capabilities.py  test_run_features.py  test_runtime.py  test_schema_policy.py  test_session_store.py  test_transport.py
tests/conformance/: __init__.py  clients.py  harness.py  run_conformance.py  scenarios.py
tmp/mtp_tui_sessions/: mtp_sessions.json
