[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtpx"
version = "0.1.3"
description = "MTPX: Model Tool Protocol and agent runtime for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prajwal Ghadge", email = "prajwalghadge2005@gmail.com" }]
maintainers = [{ name = "Himesh Mehta" }]
keywords = ["agent", "llm", "ai", "tool-orchestration", "mcp", "model-context-protocol", "groq", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/GodBoii/Model-Tool-protocol-"
Documentation = "https://github.com/GodBoii/Model-Tool-protocol-/tree/main/docs"
Repository = "https://github.com/GodBoii/Model-Tool-protocol-"
Issues = "https://github.com/GodBoii/Model-Tool-protocol-/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
