[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtpx"
version = "0.1.9"
description = "MTPX: Model Tool Protocol and agent runtime for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Prajwal Ghadge", email = "prajwalghadge2005@gmail.com" }]
maintainers = [{ name = "Himesh Mehta" }]
keywords = ["agent", "llm", "ai", "tool-orchestration", "mcp", "model-context-protocol", "groq", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
mtp = "mtp.cli.main:main"

[project.optional-dependencies]
dotenv = ["python-dotenv"]
websocket = ["websockets"]
ui-streamlit = ["streamlit"]

# Provider SDK extras.
openai = ["openai"]
groq = ["groq"]
anthropic = ["anthropic"]
gemini = ["google-genai"]
cohere = ["cohere"]
mistral = ["mistralai"]
openrouter = ["openai"]
sambanova = ["openai"]
cerebras = ["openai"]
deepseek = ["openai"]
togetherai = ["openai"]
fireworksai = ["openai"]

# Toolkit extras.
toolkits-web = [
    "requests",
    "beautifulsoup4",
    "wikipedia",
    "newspaper3k",
    "newspaper4k",
    "lxml_html_clean",
    "crawl4ai",
]

# Session store extras.
store-postgres = ["psycopg"]
store-mysql = ["pymysql", "mysql-connector-python"]
stores-db = ["psycopg", "pymysql", "mysql-connector-python"]

# Convenience aggregate extras.
providers = [
    "openai",
    "groq",
    "anthropic",
    "google-genai",
    "cohere",
    "mistralai",
]
all = [
    "python-dotenv",
    "websockets",
    "openai",
    "groq",
    "anthropic",
    "google-genai",
    "cohere",
    "mistralai",
    "requests",
    "beautifulsoup4",
    "wikipedia",
    "newspaper3k",
    "newspaper4k",
    "lxml_html_clean",
    "crawl4ai",
    "psycopg",
    "pymysql",
    "mysql-connector-python",
]

[project.urls]
Homepage = "https://github.com/GodBoii/Model-Tool-protocol-"
Documentation = "https://github.com/GodBoii/Model-Tool-protocol-/tree/main/docs"
Repository = "https://github.com/GodBoii/Model-Tool-protocol-"
Issues = "https://github.com/GodBoii/Model-Tool-protocol-/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"mtp.cli" = ["templates/**/*.tpl"]

[tool.setuptools.packages.find]
where = ["src"]
